--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -6,6 +6,10 @@
     grid-template-columns: 5rem 1fr 2fr 1fr 5rem;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
     rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+    position: fixed;
+    top: 0;
+    z-index: 100;
+
 }
     .logo {
         height: 5rem;
