--- a/src/index.css
+++ b/src/index.css
@@ -75,7 +75,9 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
-
+div{
+  width: 100%;
+}
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
