--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -1,6 +1,6 @@
 
 .main-nav {
-    width: 100%;
+    width: 100vw;
     height: 5rem;
     display: grid;
     grid-template-columns: 5rem 1fr 2fr 1fr 5rem;
